[package]
name = "hello_world"
version = "0.1.0"
authors = ["vini84200"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luminance = ">=0.42, <0.44"
luminance-glfw = "0.14"
luminance-windowing = "0.9"
glfw = { version = ">=0.39, <0.42", default-features = false }
luminance-derive = "0.6"
luminance-front = "0.3"
try-guard = "0.2.0"
wavefront_obj = "8.0.0"
cgmath = "0.17"